force-app/main/default/objects/Credential__c/fields/Achieved_Count__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Count__c</fullName>
    <label>Achieved Count</label>
    <summaryFilterItems>
        <field>User_Credential__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Credential__c.Credential__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>