force-app/main/default/objects/Credential__c/fields/Approximate_Exam_Prep_Time_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Exam_Prep_Time_Hrs__c</fullName>
    <label>Approximate Exam Prep Time (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>