force-app/main/default/objects/Credential__c/fields/Badge_Icon__c.field-meta.xml
<CustomField>
    <fullName>Badge_Icon__c</fullName>
    <formula>IMAGE(Icon__c , Name , 50, 50)</formula>
    <label>Badge Icon</label>
    <type>Text</type>
</CustomField>