force-app/main/default/objects/Credential__c/fields/Curriculum_to_Prep_for_Exam__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_to_Prep_for_Exam__c</fullName>
    <label>Curriculum to Prep for Exam</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>