force-app/main/default/objects/Credential__c/fields/EU_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EU_Target_Achievement__c</fullName>
    <label>EU Target Achievement</label>
    <summaryFilterItems>
        <field>User_Credential__c.Region__c</field>
        <operation>equals</operation>
        <value>EU</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>User_Credential__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Credential__c.Credential__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>