force-app/main/default/objects/Credential__c/fields/EU_Target_Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EU_Target_Achievement_Percentage__c</fullName>
    <formula>EU_Target_Achievement__c /  EU_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EU Target Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>