force-app/main/default/objects/Credential__c/fields/Exam_Guide__c.field-meta.xml
<CustomField>
    <fullName>Exam_Guide__c</fullName>
    <label>Exam Guide</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>