force-app/main/default/objects/Credential__c/fields/Global_Target__c.field-meta.xml
<CustomField>
    <fullName>Global_Target__c</fullName>
    <formula>US_Target__c +  EU_Target__c +  IN_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>