force-app/main/default/objects/Credential__c/fields/Global_Target_Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Global_Target_Achievement_Percentage__c</fullName>
    <formula>Global_Target_Achievement__c /  Global_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Target Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>