force-app/main/default/objects/Credential__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <type>Url</type>
</CustomField>