force-app/main/default/objects/Credential__c/fields/IN_Target__c.field-meta.xml
<CustomField>
    <fullName>IN_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IN Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>