force-app/main/default/objects/Credential__c/fields/IN_Target_Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IN_Target_Achievement_Percentage__c</fullName>
    <formula>IN_Target_Achievement__c /  IN_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IN Target Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>