force-app/main/default/objects/Credential__c/fields/IN_Target_Assigned__c.field-meta.xml
<CustomField>
    <fullName>IN_Target_Assigned__c</fullName>
    <label>IN Target Assigned</label>
    <summaryFilterItems>
        <field>User_Credential__c.Region__c</field>
        <operation>equals</operation>
        <value>IN</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>User_Credential__c.Status__c</field>
        <operation>equals</operation>
        <value>Assigned, Preparing, Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>User_Credential__c.Credential__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>