force-app/main/default/objects/Credential__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Smaller numbers indicate higher priority.</description>
    <inlineHelpText>Smaller numbers indicate higher priority.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>