force-app/main/default/objects/Credential__c/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <label>Program Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>