force-app/main/default/objects/Credential__c/fields/Registration_fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_fee__c</fullName>
    <label>Registration fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>