force-app/main/default/objects/Credential__c/fields/Retake_fee__c.field-meta.xml
<CustomField>
    <fullName>Retake_fee__c</fullName>
    <label>Retake fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>