force-app/main/default/objects/Credential__c/fields/US_Target_Achievement_Percentage__c.field-meta.xml
<CustomField>
    <fullName>US_Target_Achievement_Percentage__c</fullName>
    <formula>US_Target_Achievement__c /  US_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US Target Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>