force-app/main/default/objects/Credential__c/fields/Visible_in_Partner_Community_Cert_Tab__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Partner_Community_Cert_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in Partner Community Cert Tab</label>
    <type>Checkbox</type>
</CustomField>