force-app/main/default/objects/Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Level__c</columns>
    <columns>Registration_fee__c</columns>
    <columns>Badge_Icon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>