force-app/main/default/objects/Credential__c/listViews/Europe.listView-meta.xml
<ListView>
    <fullName>Europe</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Badge_Icon__c</columns>
    <columns>EU_Target__c</columns>
    <columns>EU_Target_Assigned__c</columns>
    <columns>EU_Target_Achievement__c</columns>
    <columns>EU_Target_Achievement_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Europe</label>
</ListView>