force-app/main/default/objects/Credential__c/listViews/India.listView-meta.xml
<ListView>
    <fullName>India</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Badge_Icon__c</columns>
    <columns>IN_Target__c</columns>
    <columns>IN_Target_Assigned__c</columns>
    <columns>IN_Target_Achievement__c</columns>
    <columns>IN_Target_Achievement_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>India</label>
</ListView>