force-app/main/default/objects/Credential__c/listViews/US.listView-meta.xml
<ListView>
    <fullName>US</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Badge_Icon__c</columns>
    <columns>US_Target__c</columns>
    <columns>US_Target_Assigned__c</columns>
    <columns>US_Target_Achievement__c</columns>
    <columns>US_Target_Achievement_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>US</label>
</ListView>